# StreakFreezeBot

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
.github/workflows/: cmake-linux-platform.yml  deploy-server.yml
mini_app/: index.html
mini_app_react/: package-lock.json  package.json  tailwind.config.js
mini_app_react/public/: index.html
mini_app_react/src/: App.tsx  RootTabBar.tsx  config_declaration.tsx  index.css  index.tsx
mini_app_react/src/components/: AddFreeze.tsx  Calendar.tsx  CalendarSection.tsx  ChallengeAvatar.tsx  ChallengeHeader.tsx  ChallengeInfo.tsx  ChallengeInput.tsx  ChallengeInvite.tsx  ChallengeParticipant.tsx  ChallengeParticipantPreview.tsx  ChallengeParticipantProgress.tsx  ChallengeRepeat.tsx  ChallengesSection.tsx  CommitSection.tsx  ExtendedStreak.tsx  Freeze.tsx  FreezeSection.tsx  FriendRequest.tsx  FriendsSection.tsx  Loading.tsx  Nudge.tsx  Preferences.tsx  ProfileAvatar.tsx  StreakEdit.tsx  StreakInfo.tsx  StreakSection.tsx  ToDo.tsx  ToDoEdit.tsx  ToDoPreview.tsx
mini_app_react/src/core/: Background.tsx  Challenge.tsx  Entry.tsx  Extended.tsx  Foreground.tsx  Friend.tsx  Header.tsx  Img.tsx  ListPlaceholder.tsx  Loader.tsx  Streak.tsx  StreakContext.tsx  ToDo.tsx  UserContext.tsx  UserContextSerialization.tsx  UserPreferences.tsx
mini_app_react/src/helpers/: Challenges.tsx  Debug.tsx  Friends.tsx  Requests.tsx  Resources.tsx  Theme.tsx  Time.tsx
mini_app_react/src/tabs/: ChallengesTab.tsx  CommitTab.tsx  FriendsTab.tsx  RootTabBar.tsx  StreakTab.tsx
run_tree_example/: Config.ini  config.tsx  env.js
scripts/: build_all.sh  build_all_and_run.sh  build_cpp.sh  build_react.sh  run.sh
sources/: bot.cpp  bot.hpp  challenge.cpp  challenge.hpp  freeze.cpp  freeze.hpp  http.hpp  json.hpp  logger.cpp  logger.hpp  main.cpp  migration.cpp  migration.hpp  model.cpp  model.hpp  notification.hpp  openai.cpp  openai.hpp  payload.hpp  perf.hpp  queue.hpp  ranges.hpp  server.cpp  server.hpp  simple_bot.cpp  simple_bot.hpp  streak.cpp  streak.hpp  tgbridge.cpp  tgbridge.hpp  time.cpp  time.hpp  timer_client.cpp  timer_client.hpp  todo.cpp  todo.hpp  user.cpp  user.hpp  user_preferences.cpp  user_preferences.hpp
